testing/tests/ui/cycle2.rs
use askama::Template;

#[derive(Template)]
#[template(path = "cycle1.html")]
struct Cycle;

fn main() {
}
